--- a/index.html
+++ b/index.html
@@ -1,15 +1,5 @@
 ---
 layout: home
-title: About this Blog!
-subtitle: This is where I will talk  about me
-permalink: About
+title: My website
+subtitle: This is where I will tell my friends way too much about me
 ---
-
-I am new to the industry, and I am starting this blog mostly as a learning
-platform for myself - since the best way to learn and prove your knowledge is to
-present the topic at hand in a way that is easily digestible for others. In this
-blog. I will focus on the foundational skills that it takes to get a job in the
-IT or Programming industry. It will include topics from Front End Development,
-Back End Development, Networking, Security, Cloud, Operating System Concepts
-(CLI, VMs, Containers etc.), Linux, and useful Dev Tools/Tips. So, as I learn
-you learn! Expect updates weekly on Tuesdays and Saturdays!
